Closed Bug 1690043 Opened 5 years ago Closed 5 years ago

Custom scrollbars on Linux can't have transparency.

Categories

(Core :: Widget: Gtk, defect)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
87 Branch
Fission Milestone M7
Tracking Status
firefox87 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

Test-case: data:text/html,<style>:root { background: black; scrollbar-color: transparent transparent; overflow: scroll; }</style>.

Flags: needinfo?(emilio)

This seems to come from bug 1179780, but custom scrollbars shouldn't
have this requirement, and it's kind of artificial anyway.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2d387f553202 Remove requirement for root scrollbars to be opaque in the non-native theme. r=mstange
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/27432 for changes under testing/web-platform/tests
Pushed by emilio@crisal.io: https://hg.mozilla.org/integration/autoland/rev/75042b68adbb Add mozilla::Unused to deal with gcc builds.
Fission Milestone: --- → M7
OS: Unspecified → Linux
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
Upstream PR merged by moz-wptsync-bot

Confirming issue is fixed in 87.0a1-20210202095107

Regressions: 1691456
Regressions: 1731581
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: