Bug 1690043 - Remove requirement for root scrollbars to be opaque in the non-native theme. r=mstange

This seems to come from bug 1179780, but custom scrollbars shouldn't
have this requirement, and it's kind of artificial anyway.

Differential Revision: https://phabricator.services.mozilla.com/D103692