widget/cocoa/nsNativeBasicThemeCocoa.h
@@ -36,16 +36,16 @@ class nsNativeBasicThemeCocoa : public nsNativeBasicTheme {
                            const LayoutDeviceRect& aRect, bool aHorizontal,
                            nsIFrame* aFrame, const ComputedStyle& aStyle,
                            const EventStates& aDocumentState,
-                           DPIRatio aDpiRatio, bool aIsRoot) override;
+                           DPIRatio aDpiRatio) override;
   void PaintScrollbar(DrawTarget* aDrawTarget, const LayoutDeviceRect& aRect,
                       bool aHorizontal, nsIFrame* aFrame,
                       const ComputedStyle& aStyle,
-                      const EventStates& aDocumentState, DPIRatio aDpiRatio,
-                      bool aIsRoot) override;
+                      const EventStates& aDocumentState,
+                      DPIRatio aDpiRatio) override;
   void PaintScrollCorner(DrawTarget* aDrawTarget, const LayoutDeviceRect& aRect,
                          nsIFrame* aFrame, const ComputedStyle& aStyle,
-                         const EventStates& aDocumentState, DPIRatio aDpiRatio,
-                         bool aIsRoot) override;
+                         const EventStates& aDocumentState,
+                         DPIRatio aDpiRatio) override;
 
  protected:
   virtual ~nsNativeBasicThemeCocoa() = default;
