widget/gtk/nsNativeBasicThemeGTK.h
@@ -29,12 +29,12 @@ class nsNativeBasicThemeGTK : public nsNativeBasicTheme {
   void PaintScrollbar(DrawTarget* aDrawTarget, const LayoutDeviceRect& aRect,
                       bool aHorizontal, nsIFrame* aFrame,
                       const ComputedStyle& aStyle,
-                      const EventStates& aDocumentState, DPIRatio aDpiRatio,
-                      bool aIsRoot) override;
+                      const EventStates& aDocumentState,
+                      DPIRatio aDpiRatio) override;
   void PaintScrollCorner(DrawTarget* aDrawTarget, const LayoutDeviceRect& aRect,
                          nsIFrame* aFrame, const ComputedStyle& aStyle,
-                         const EventStates& aDocumentState, DPIRatio aDpiRatio,
-                         bool aIsRoot) override;
+                         const EventStates& aDocumentState,
+                         DPIRatio aDpiRatio) override;
   bool ThemeSupportsScrollbarButtons() override { return false; }
   ScrollbarSizes GetScrollbarSizes(nsPresContext*, StyleScrollbarWidth,
                                    Overlay) override;
